<resources>
    <string name="app_name">ListMakingApp</string>
    <string name="shared_pref_name">ListAppSharedPref</string>

    <string name="login">Login</string>
    <string name="sign_up"> Sign Up</string>
    <string name="no_account_text">Don\'t have an account yet?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="search_item_in_list">Search for item</string>
    <string name="sort_by">Sort By</string>
    <string name="group_by">Group By</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_load">Loading Image…</string>
    <string name="item_name">Item Name</string>
    <string name="unit">Unit</string>
    <string name="unit_number">Unit Number</string>
    <string name="total_price">Total Price</string>
</resources>
